Add paragraph element to the body of the HTML document

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ahehehehehehe</title>
 </head>
 <body>
+    <p>dawdadda</p>
     <h1>dawdadda</h1>
     <h1>dawdadda</h1>
     <h1>dawdadda</h1>
